<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <widget.DistributeTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/d12"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/instruction"
        android:textColor="@color/fontHint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/d12"
        android:paddingRight="@dimen/d12">

        <Button
            android:id="@+id/btnUrlIntegration"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            android:layout_marginEnd="@dimen/d12"
            android:layout_marginRight="@dimen/d12"
            android:layout_weight="1"
            android:text="@string/urlIntegration"
            android:textColor="@color/fontInput"
            android:textSize="@dimen/s14" />

        <Button
            android:id="@+id/btnDirectoryIntegration"
            android:layout_width="0dp"
            android:layout_height="?actionBarSize"
            android:layout_weight="1"
            android:text="@string/directoryIntegration"
            android:textColor="@color/fontInput"
            android:textSize="@dimen/s14" />
    </LinearLayout>
</RelativeLayout>